--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
     "recommendations": [
         "ms-python.python",
         "visualstudioexptteam.vscodeintellicode",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "paulober.pico-w-go",
+        "streetsidesoftware.code-spell-checker"
     ]
 }
