--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "picowgo.syncFolder": "",
     "python.analysis.typeshedPaths": [".vscode/Pico-W-Stub"],
     "python.analysis.extraPaths": [".vscode/Pico-W-Stub/stubs"],
-    "cSpell.words": ["Micropython", "Pico"]
+    "cSpell.words": ["Micropython", "Pico"],
+    "picowgo.syncFileTypes": ["py", "txt", "log", "json", "xml", "html", "js", "css", "mpy", "env"]
 }
