refactor: hacs structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "python.linting.enabled": true,
     "python.languageServer": "Pylance",
     "python.analysis.typeCheckingMode": "basic",
-    "picowgo.syncFolder": "",
     "python.analysis.typeshedPaths": [".vscode/Pico-W-Stub"],
     "python.analysis.extraPaths": [".vscode/Pico-W-Stub/stubs"],
     "cSpell.words": ["Micropython", "Pico"],
+    "picowgo.syncFolder": "pico-code",
     "picowgo.syncFileTypes": ["py", "txt", "log", "json", "xml", "html", "js", "css", "mpy", "env"]
 }
