--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     "python.analysis.typeshedPaths": [".vscode/Pico-W-Stub"],
     "python.analysis.extraPaths": [".vscode/Pico-W-Stub/stubs"],
     "cSpell.words": ["Micropython", "Pico"],
-    "picowgo.syncFolder": "pico-code",
-    "picowgo.syncFileTypes": ["py", "txt", "log", "json", "xml", "html", "js", "css", "mpy", "env"]
+    "micropico.syncFolder": "pico-code",
+    "micropico.syncFileTypes": ["py", "txt", "log", "json", "xml", "html", "js", "css", "mpy", "env"]
 }
